radio fields overlap fix

--- a/src/ui/components/basic/BasicFields.module.css
+++ b/src/ui/components/basic/BasicFields.module.css
@@ -51,6 +51,8 @@ textarea {
   text-transform: capitalize;
   font-size: 14px;
   padding-top: 5px;
+  margin-bottom: 20px;
+  display: inline-block;
 }
 
 .radioContainer input[type="radio"] {
